[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tronpy"
dynamic = ["version"]
description = "TRON Python client library"
authors = [{ name = "andelf", email = "andelf@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["tron", "api", "blockchain"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "base58",
    "coincurve",
    "eth-abi>=5.0.0,<6.0.0",
    "httpx",
    "pycryptodome<4",
    "requests",
]

[project.optional-dependencies]
mnemonic = ["mnemonic==0.20"]
offline = ["protobuf"]

[project.urls]
Homepage = "https://github.com/andelf/tronpy"
Repository = "https://github.com/andelf/tronpy"
Documentation = "https://tronpy.readthedocs.io"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "mypy",
    "codecov",
    "pre-commit",
    "freezegun",
    "ruff>=0.12.3",
]
docs = ["sphinx"]

[tool.hatch.version]
path = "tronpy/version.py"

[tool.hatch.build.targets.wheel]
packages = ["tronpy"]

[tool.ruff]
target-version = "py38"
line-length = 127

[tool.ruff.lint]
select = [
    "F",
    "E",
    "I",
    "UP",
    "YTT",
    "B",
    "T10",
    "C",
    "SIM",
    "RUF100",
    "RET",
    "A",
    "S",
    "ASYNC",
    "TID",
]
unfixable = ["F401"]
ignore = ["RET502", "RET503", "S104", "S507", "ASYNC110"]
mccabe = { max-complexity = 12 }

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.pytest.ini_options]
addopts = ["--cov=.", "--cov-report", "term-missing"]
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
]

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true

[tool.coverage.run]
omit = ["*__init__.py", "tests/*", "venv/*", "env/*", "setup.py"]
